# hill-map

./: .env.example  .gitignore  README.md  data.csv  pyproject.toml
src/hill_map/: cli.py  data.py  settings.py
tests/: test_hill_map.py
